# basecam

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  STYLE.rst  codecov.yml  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: lint.yml  release.yml  test.yml
basecam/: __init__.py  camera.py  events.py  exceptions.py  exposure.py  helpers.py  mixins.py  notifier.py  utils.py
basecam/actor/: __init__.py  actor.py  camera.py  commands.py  schema.json  tools.py
basecam/actor/commands/: __doc_parser.py  __init__.py  area.py  base.py  binning.py  expose.py  reconnect.py  set_default.py  shutter.py  status.py  temperature.py
basecam/model/: __init__.py  base.py  magic.py  models.py
basecam/models/: __init__.py  base.py  builtin.py  card.py  fits.py  magic.py  models.py
basecam/utils/: configuration.py  fits.py
docs/: abstract.rst  actor.rst  api.rst  changelog.md  conf.py  events.rst  exposing.rst  exposure.rst  getting-started.rst  index.rst  mixins.rst  requirements.txt
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
python/basecam/: __init__.py  actor.py  camera.py  events.py  exceptions.py  helpers.py  notifier.py
python/basecam/core/: exceptions.py
python/basecam/examples/mantaCam/: setup.py
python/basecam/examples/mantaCam/mantacam/: cmanta.cpp
python/basecam/tests/: test_main.py
python/basecam/utils/: __init__.py  color_print.py
tests/: __init__.py  conftest.py  run_test_actor.py  test_actor.py  test_actor_camera.py  test_actor_commands.py  test_actor_legacy.py  test_camera.py  test_camera_system.py  test_exposure.py  test_mixins.py  test_model.py  test_models.py  test_notifier.py  test_utils.py
tests/data/: actorkeys.py  test_config.yaml
