[metadata]
name = sdss-basecam
version = 0.1.0dev
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = A base library for camera wrapping and actor
url = https://github.com/sdss/basecam
project_urls =
    Repository = https://github.com/sdss/basecam
    Documentation = sdss-basecam.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    numpy>=1.17
    pyyaml>=5.1
    pygments>=2.2.0
    astropy>=3.2.1
    sdss-clu @ git+git://github.com/sdss/clu@master

[options.extras_require]
dev =
    asynctest>=0.13.0
    flake8
    ipython
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock
    pytest-sugar
    invoke
    bump2version
    wheel
    tox
    tox-pyenv
    twine>=2.0.0
docs =
    Sphinx>=1.8.0
    releases>=1.6.1
    sphinxcontrib-trio>=1.0.1


[isort]
line_length=99
lines_after_imports=2
use_parentheses=true
balanced_wrapping=true


[flake8]
ignore =
	H101
	E722
	W504
	W505
max-line-length = 99


[bumpversion]
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
serialize =
	{major}.{minor}.{patch}{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = alpha
values =
	dev
	alpha

[bumpversion:file:basecam/__init__.py]
[bumpversion:file:setup.cfg]


[coverage:run]
branch = true
include = basecam/*
omit =
    */utils/configuration.py
    */utils/logger.py
    */utils/color_print.py


[tool:pytest]
testpaths = tests
addopts = -p no:warnings


[tox:tox]
envlist = py37, py38, build_docs
requires =

[testenv]
extras =
    dev
commands = pytest

[testenv:py37]
commands = pytest --cov basecam --cov-report html

[testenv:build_docs]
description = Build docs using Sphinx
basepython = python3.7
changedir = docs
extras =
    dev
    docs
whitelist_externals =
    rm
    cd
    sphinx
    make
commands =
    rm -Rf _build
    sphinx-build . _build --color -W -bhtml {posargs}
